[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/circle.png" type="Texture" id=1]
[ext_resource path="res://assets/red_circle.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui/Joystick.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Joystick" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BigCircle" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.607843 )
texture = ExtResource( 1 )

[node name="SmallCircle" type="Sprite" parent="BigCircle"]
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="input_event" from="." to="." method="_on_Joystick_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
